fixed width issue on smaller devices

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -74,8 +74,8 @@
 
   // Mobile Devices
   @media (max-width: 480px) {
-    margin-top: 30%;
     margin-left: 8%;
+    padding: 1em;
   }
 }
 
