--- a/styles/contact.module.scss
+++ b/styles/contact.module.scss
@@ -62,7 +62,7 @@
     justify-content: center;
     align-items: center;
     font-weight: 400;
-    max-width: 900px;
+    // max-width: 900px;
     padding: 2em 3em;
     margin: 1em 0;
     border: 2px solid gray;
