--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -82,7 +82,7 @@ html{
   margin: 0;
   // DO NOT SET HEIGHT
   min-height: 100%;
-  width: 100vw;
+  width: 100%;
   // overflow: hidden;
 
   box-sizing: border-box;
@@ -95,7 +95,7 @@ html{
 body {
   margin: 0;
   padding: 0;
-  width: 100vw;
+  width: 100%;
   // DO NOT SET HEIGHT
   min-height: 100%;
 
@@ -112,7 +112,7 @@ body {
 /* Media Query for Mobile Devices */
 @media (max-width: 480px) {
   body {
-      // background-color: rgb(134, 158, 179);
+      background-color: rgb(134, 158, 179);
   }
   :root{ 
     --heroTitle-font-size: 50px;
@@ -132,7 +132,7 @@ body {
 /* Media Query for low resolution  Tablets, Ipads */
 @media (min-width: 481px) and (max-width: 767px) {
   body {
-      // background-color: yellow;
+      background-color: yellow;
   }
   :root{ 
     --heroTitle-font-size: 50px;
@@ -152,7 +152,7 @@ body {
 /* Media Query for Tablets & Ipads in portrait mode */
 @media (min-width: 768px) and (max-width: 1024px){
   body {
-      // background-color: blue;
+      background-color: blue;
   }
   :root{ 
     --heroTitle-font-size: 50px;
@@ -162,27 +162,6 @@ body {
     --heroDesc-font-size: 22px;
     --aboutMeDesc-font-size: 22px;
   }
-  // TO DO : Absolute header
-  header, header.scrollDown, header.scrollUp {
-    visibility: hidden;
-  }
-}
-
-/* Media Query for Laptops and Desktops */
-@media (min-width: 1025px) and (max-width: 1280px){
-  body {
-      // background-color: green;
-  }
-
-  :root{ 
-    --heroTitle-font-size: 50px;
-    --parallaxTitle-font-size: 200px;
-    --parallaxSubitle-font-size: 36px;
-    --heroSubtitle-font-size: 40px;
-    --heroDesc-font-size: 22px;
-    --aboutMeDesc-font-size: 22px;
-  }
-
   header{
     position: sticky;
     top: 0;
@@ -201,43 +180,14 @@ body {
   .scrollDown{
     transform: translate3d(0, -100%, 0);
   }
-}
-
-/* Media Query for Large screens */
-@media (min-width: 1281px) {
-  body {
-      // background-color: violet;
-  }
-  :root{ 
-    --heroTitle-font-size: 50px;
-    --parallaxTitle-font-size: 200px;
-    --parallaxSubitle-font-size: 36px;
-    --heroSubtitle-font-size: 40px;
-    --heroDesc-font-size: 22px;
-    --aboutMeDesc-font-size: 22px;
-  }
-  header{
-    position: sticky;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    text-align: center;
-    background: var(--app-header);
-    z-index: 9999;
-    transition: all 300ms ease-in-out;
-  }
-
-  .scrollUp{
-    // filter: drop-shadow(0 -10px 20px rgb(170, 170, 170));
-  }
-
-  .scrollDown{
-    transform: translate3d(0, -100%, 0);
-  }
-  .nav__menu-bar{
-    display: none;
+  nav{
+    display: flex;
+    padding: 10px 30px 10px 40px;
+    justify-content: space-between;
+    align-items: center;
   }
   .nav__menu-list{
+    display: flex;
     position: unset;
     flex-direction: row;
     // min-height: fit-content;
@@ -255,7 +205,129 @@ body {
     // background-color: black;
     transition: all 0.2s;
   }
-  
+  .nav__link:hover:before{
+   width: 100%;
+  }
+}
+
+/* Media Query for Laptops and Desktops */
+@media (min-width: 1025px) and (max-width: 1280px){
+  body {
+      background-color: green;
+  }
+
+  :root{ 
+    --heroTitle-font-size: 50px;
+    --parallaxTitle-font-size: 200px;
+    --parallaxSubitle-font-size: 36px;
+    --heroSubtitle-font-size: 40px;
+    --heroDesc-font-size: 22px;
+    --aboutMeDesc-font-size: 22px;
+  }
+
+  header{
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    text-align: center;
+    background: var(--app-header);
+    z-index: 9999;
+    transition: all 300ms ease-in-out;
+  }
+
+  .scrollUp{
+    // filter: drop-shadow(0 -10px 20px rgb(170, 170, 170));
+  }
+
+  .scrollDown{
+    transform: translate3d(0, -100%, 0);
+  }
+  nav{
+    display: flex;
+    padding: 10px 30px 10px 40px;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .nav__menu-list{
+    display: flex;
+    position: unset;
+    flex-direction: row;
+    // min-height: fit-content;
+    width: fit-content;
+    column-gap: 24px;
+    align-items: center;
+  }
+  .nav__link::before{
+    content: '';
+    position: absolute;
+    width: 0%;
+    height: 6px;
+    bottom: -16px;
+    left: 0;
+    // background-color: black;
+    transition: all 0.2s;
+  }
+  .nav__link:hover:before{
+   width: 100%;
+  }
+}
+
+/* Media Query for Large screens */
+@media (min-width: 1281px) {
+  body {
+      background-color: violet;
+  }
+  :root{ 
+    --heroTitle-font-size: 50px;
+    --parallaxTitle-font-size: 200px;
+    --parallaxSubitle-font-size: 36px;
+    --heroSubtitle-font-size: 40px;
+    --heroDesc-font-size: 22px;
+    --aboutMeDesc-font-size: 22px;
+  }
+  header{
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    text-align: center;
+    background: var(--app-header);
+    z-index: 9999;
+    transition: all 300ms ease-in-out;
+  }
+
+  .scrollUp{
+    // filter: drop-shadow(0 -10px 20px rgb(170, 170, 170));
+  }
+  .scrollDown{
+    transform: translate3d(0, -100%, 0);
+  }
+  nav{
+    display: flex;
+    padding: 10px 30px 10px 40px;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .nav__menu-list{
+    display: flex;
+    position: unset;
+    flex-direction: row;
+    // min-height: fit-content;
+    width: fit-content;
+    column-gap: 24px;
+    align-items: center;
+  }
+  .nav__link::before{
+    content: '';
+    position: absolute;
+    width: 0%;
+    height: 6px;
+    bottom: -16px;
+    left: 0;
+    // background-color: black;
+    transition: all 0.2s;
+  }
   .nav__link:hover:before{
    width: 100%;
   }
@@ -283,32 +355,31 @@ hr.sectionLine {
   cursor: pointer;
 }
 
-header{
-  position: sticky;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  text-align: center;
-  background: var(--app-header);
-  z-index: 9999;
-  transition: all 300ms ease-in-out;
-}
+// header{
+//   position: sticky;
+//   top: 0;
+//   left: 0;
+//   width: 100vw;
+//   text-align: center;
+//   background: var(--app-header);
+//   z-index: 9999;
+//   transition: all 300ms ease-in-out;
+// }
 
-.scrollUp{
-  // filter: drop-shadow(0 -10px 20px rgb(170, 170, 170));
-}
+// .scrollUp{
+//   // filter: drop-shadow(0 -10px 20px rgb(170, 170, 170));
+// }
 
-.scrollDown{
-  transform: translate3d(0, -100%, 0);
-}
+// .scrollDown{
+//   transform: translate3d(0, -100%, 0);
+// }
 
-nav{
-  display: flex;
-  padding: 10px 30px 10px 40px;
-  justify-content: space-between;
-  align-items: center;
-  
-}
+// nav{
+//   display: flex;
+//   padding: 10px 30px 10px 40px;
+//   justify-content: space-between;
+//   align-items: center;
+// }
 
 .nav__menu-bar{
   display: flex;
@@ -321,7 +392,7 @@ nav{
   height: 4px;
   border-radius: 2px;
 }
-// .nav__menu-list{
+// .nav__menu-list{ // Column menu
 //   display: flex;
 //   flex-direction: column;
 //   position: fixed;
@@ -348,16 +419,16 @@ nav{
   right: 0;
 }
 
-.nav__link{
-  font-size: 20px; 
-  font-family: Montserrat, Avenir, Poppins, 'Sans Serif';
-  position: relative;
-  transition: all 0.2s;
-  cursor: pointer;
-  &.active{
-    font-weight: bold;
-  }
-}
+// .nav__link{
+//   font-size: 20px; 
+//   font-family: Montserrat, Avenir, Poppins, 'Sans Serif';
+//   position: relative;
+//   transition: all 0.2s;
+//   cursor: pointer;
+//   &.active{
+//     font-weight: bold;
+//   }
+// }
 
 .mode-switch{
   background-color: transparent;
@@ -377,13 +448,6 @@ nav{
   stroke: var(--main-color);
 }
 
-.nav__link:hover{
- font-weight: bold;
-}
-
-.center{
-  min-height: 600px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+// .nav__link:hover{
+//  font-weight: bold;
+// }
